--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BPe-7l-bke">
-                                <rect key="frame" x="65" y="126" width="245" height="245"/>
+                                <rect key="frame" x="65" y="126" width="245" height="245.00000000000006"/>
                                 <color key="backgroundColor" red="1" green="0.86274509803921573" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BPe-7l-bke" secondAttribute="height" multiplier="1:1" id="h3Q-jR-AMV"/>
@@ -792,13 +792,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42V-kr-efX">
-                                                    <rect key="frame" x="20" y="202" width="43.5" height="21"/>
+                                                    <rect key="frame" x="20" y="197" width="43.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOH-Ia-cyh">
-                                                    <rect key="frame" x="20" y="171" width="43.5" height="21"/>
+                                                    <rect key="frame" x="20" y="166" width="43.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -812,8 +812,9 @@
                                             <constraint firstItem="ivD-6F-Z8D" firstAttribute="centerX" secondItem="Boe-0f-4y9" secondAttribute="centerX" id="YqX-4V-WQv"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dOH-Ia-cyh" secondAttribute="trailing" constant="10" id="Z05-oj-pCN"/>
                                             <constraint firstItem="42V-kr-efX" firstAttribute="top" secondItem="dOH-Ia-cyh" secondAttribute="bottom" constant="10" id="Zc1-mx-KrZ"/>
-                                            <constraint firstItem="dOH-Ia-cyh" firstAttribute="top" secondItem="ivD-6F-Z8D" secondAttribute="bottom" constant="15" id="hHt-D2-9hg"/>
+                                            <constraint firstItem="dOH-Ia-cyh" firstAttribute="top" secondItem="ivD-6F-Z8D" secondAttribute="bottom" constant="10" id="hHt-D2-9hg"/>
                                             <constraint firstItem="dOH-Ia-cyh" firstAttribute="leading" secondItem="Boe-0f-4y9" secondAttribute="leading" constant="20" id="hUi-We-x5o"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="42V-kr-efX" secondAttribute="bottom" constant="5" id="xD9-ma-c79"/>
                                             <constraint firstItem="ivD-6F-Z8D" firstAttribute="top" secondItem="Boe-0f-4y9" secondAttribute="top" constant="10" id="zeF-em-ag1"/>
                                         </constraints>
                                         <connections>
@@ -937,7 +938,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pwm-9T-su2">
-                                <rect key="frame" x="50" y="545.5" width="275" height="30"/>
+                                <rect key="frame" x="50" y="563" width="275" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.82352941180000006" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -953,14 +954,14 @@
                             <constraint firstItem="8XV-cb-jUj" firstAttribute="trailing" secondItem="E5a-nn-u6g" secondAttribute="trailing" id="Kkb-fn-mcU"/>
                             <constraint firstItem="w9x-V4-HoV" firstAttribute="top" secondItem="yjX-JK-uSG" secondAttribute="top" constant="20" id="KoM-me-sJV"/>
                             <constraint firstItem="E5a-nn-u6g" firstAttribute="trailing" secondItem="w9x-V4-HoV" secondAttribute="trailing" id="QvD-xA-8nI"/>
-                            <constraint firstItem="yjX-JK-uSG" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pwm-9T-su2" secondAttribute="bottom" constant="25" id="Taz-wL-1H0"/>
+                            <constraint firstItem="yjX-JK-uSG" firstAttribute="bottom" secondItem="pwm-9T-su2" secondAttribute="bottom" constant="25" id="Taz-wL-1H0"/>
                             <constraint firstItem="cOo-y8-3bY" firstAttribute="centerX" secondItem="yjX-JK-uSG" secondAttribute="centerX" id="ULY-TE-mg8"/>
                             <constraint firstItem="pwm-9T-su2" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="50" id="Uyk-4z-X02"/>
                             <constraint firstItem="w9x-V4-HoV" firstAttribute="centerX" secondItem="yjX-JK-uSG" secondAttribute="centerX" id="XH2-ka-cmm"/>
                             <constraint firstItem="E5a-nn-u6g" firstAttribute="top" secondItem="w9x-V4-HoV" secondAttribute="bottom" constant="20" id="Xdp-2P-aRf"/>
                             <constraint firstItem="8XV-cb-jUj" firstAttribute="leading" secondItem="E5a-nn-u6g" secondAttribute="leading" id="Z7Z-bZ-2lD"/>
                             <constraint firstItem="E5a-nn-u6g" firstAttribute="leading" secondItem="w9x-V4-HoV" secondAttribute="leading" id="ZN3-Ly-xKT"/>
-                            <constraint firstItem="pwm-9T-su2" firstAttribute="top" secondItem="cOo-y8-3bY" secondAttribute="bottom" constant="30" id="bXq-gd-6ig"/>
+                            <constraint firstItem="pwm-9T-su2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cOo-y8-3bY" secondAttribute="bottom" constant="30" id="bXq-gd-6ig"/>
                             <constraint firstItem="cOo-y8-3bY" firstAttribute="top" secondItem="8XV-cb-jUj" secondAttribute="bottom" constant="30" id="bn1-Z3-C7q"/>
                             <constraint firstItem="w9x-V4-HoV" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="40" id="h1u-Um-fo9"/>
                             <constraint firstItem="cOo-y8-3bY" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="40" id="o9T-y1-lae"/>
@@ -1375,9 +1376,10 @@
                             <constraint firstItem="pHi-DR-ibe" firstAttribute="trailing" secondItem="lwC-tV-qZl" secondAttribute="trailing" id="Z20-aL-NTx"/>
                             <constraint firstItem="Ae1-HT-j8x" firstAttribute="centerX" secondItem="tcJ-0P-dX1" secondAttribute="centerX" id="ZVl-Ab-Y4V"/>
                             <constraint firstItem="SQw-jn-jti" firstAttribute="centerY" secondItem="lwC-tV-qZl" secondAttribute="centerY" id="a4e-4d-sk8"/>
+                            <constraint firstItem="tcJ-0P-dX1" firstAttribute="bottom" secondItem="Ae1-HT-j8x" secondAttribute="bottom" constant="15" id="bcB-b0-2GY"/>
                             <constraint firstItem="eqz-oY-Is7" firstAttribute="centerX" secondItem="tcJ-0P-dX1" secondAttribute="centerX" id="iZc-dt-6R5"/>
                             <constraint firstItem="Szs-0V-MiJ" firstAttribute="top" secondItem="EQn-Vc-zXB" secondAttribute="bottom" constant="40" id="ifg-qp-eoS"/>
-                            <constraint firstItem="Ae1-HT-j8x" firstAttribute="top" secondItem="Hb1-DU-5J9" secondAttribute="bottom" constant="10" id="nNV-V3-O1z"/>
+                            <constraint firstItem="Ae1-HT-j8x" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Hb1-DU-5J9" secondAttribute="bottom" constant="10" id="nNV-V3-O1z"/>
                             <constraint firstItem="eqz-oY-Is7" firstAttribute="top" secondItem="tcJ-0P-dX1" secondAttribute="top" constant="20" id="qnc-fM-yse"/>
                             <constraint firstItem="fmz-bV-VMZ" firstAttribute="centerY" secondItem="pHi-DR-ibe" secondAttribute="centerY" id="wlA-Is-f9p"/>
                         </constraints>
